--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,18 @@ cmake_minimum_required(VERSION 3.10)
 project(TextTo3d)
 
 # Set the path to the wxWidgets library
-#set(wxWidgets_ROOT_DIR C:/Users/Anumudu/Downloads/wxWidgets-3.2.2.1)
+set(wxWidgets_ROOT_DIR C:/Users/Anumudu/Downloads/wxWidgets-3.2.2.1)
 
 # Include the wxWidgets configuration
-#find_package(wxWidgets REQUIRED COMPONENTS core base)
+find_package(wxWidgets COMPONENTS core base)
+
+# Include the wxWidgets use file to set up compiler flags, etc.
+include(${wxWidgets_USE_FILE})
 
 # Specify the name of the exe and add the entry point of the entire application
 add_executable(TextTo3d src/main.cpp)
 
+target_include_directories(TextTo3d PRIVATE ${wxWidgets_INCLUDE_DIRS})
+
+# Link against the wxWidgets libraries
+target_link_libraries(TextTo3d PRIVATE ${wxWidgets_LIBRARIES}) 
